# DFODE-kit

./: README.md  pyproject.toml
canonical_cases/: README.md
canonical_cases/oneD_freely_propagating_flame/: Allrun  dfode_kit_init.ipynb
canonical_cases/oneD_freely_propagating_flame/0/: T.orig  U.orig  Ydefault.orig  p.orig
canonical_cases/oneD_freely_propagating_flame/system/: controlDict  sampleConfigDict
dfode_kit/cli_tools/commands/: augment.py
dfode_kit/data_operations/: augment_data.py  h5_kit.py
dfode_kit/dfode_core/train/: train.py
tutorials/: README.md
tutorials/oneD_freely_propagating_flame/: readme.md
tutorials/oneD_freely_propagating_flame/1_sample_train/: Allclean  dfode_kit_init.ipynb  dfode_kit_tutorial.ipynb  readme.md
tutorials/oneD_freely_propagating_flame/1_sample_train/0/: HO2.orig  OH.orig
tutorials/oneD_freely_propagating_flame/1_sample_train/system/: sampleConfigDict  sampleConfigDict.orig
tutorials/oneD_freely_propagating_flame/2_model_test/posteriori/oneD_freely_propagating_flame/: inference.py
tutorials/oneD_freely_propagating_flame/2_model_test/priori/: test.py
tutorials/twoD_HIT_flame/1_sample_train/: dfode_kit_init.ipynb  dfode_kit_tutorial.ipynb
tutorials/twoD_HIT_flame/1_sample_train/standard_case_for_sampling/0/: H.orig  H2.orig  H2O.orig  H2O2.orig  N2.orig  O.orig  O2.orig
tutorials/twoD_HIT_flame/1_sample_train/standard_case_for_sampling/constant/: CanteraTorchProperties
tutorials/twoD_HIT_flame/2_model_test/posteriori/twoD_HIT_flame/0/: H  (+7 more)
tutorials/twoD_HIT_flame/2_model_test/priori/: model.pt  test.py
(+25 files in other folders)
