[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dfode"
version = "0.1"
dependencies = [
    "numpy",
    "cantera<3.1",
    "h5py",
    "matplotlib",
    "torch",
]

[project.scripts]
dfode-kit = "dfode_kit.cli_tools.main:main"

[tool.setuptools.packages.find]
include = ["dfode_kit"]